src/objects/Language__c.object
<CustomObject>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Survey Language Option Display Names</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Language_Code__c</fullName>
        <description>Language code that maps to EPC</description>
        <label>EPC Language Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localization_Sort_Order__c</fullName>
        <description>Localization Sort Order</description>
        <label>Localization Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EPC_Language_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Localization_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>